# Robotics_test

./: Dockerfile  Findings.docx  README.md  TestPlan.md
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/include/buggy_robot/: Command.h  SetTarget.h  SetTargetRequest.h  SetTargetResponse.h  State.h
catkin_ws/devel/share/buggy_robot/cmake/: buggy_robot-msg-extras.cmake  buggy_robot-msg-paths.cmake  buggy_robotConfig.cmake
catkin_ws/devel/share/common-lisp/ros/buggy_robot/msg/: Command.lisp  State.lisp  _package.lisp  _package_Command.lisp  _package_State.lisp  buggy_robot-msg.asd
catkin_ws/devel/share/common-lisp/ros/buggy_robot/srv/: SetTarget.lisp  _package.lisp  _package_SetTarget.lisp  buggy_robot-srv.asd
catkin_ws/devel/share/gennodejs/ros/buggy_robot/msg/: Command.js  State.js  _index.js
catkin_ws/devel/share/gennodejs/ros/buggy_robot/srv/: SetTarget.js
catkin_ws/devel/share/roseus/ros/buggy_robot/: manifest.l
catkin_ws/devel/share/roseus/ros/buggy_robot/msg/: Command.l  State.l
catkin_ws/devel/share/roseus/ros/buggy_robot/srv/: SetTarget.l
catkin_ws/src/buggy_robot/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/buggy_robot/launch/: buggy_robot.launch
catkin_ws/src/buggy_robot/msg/: Command.msg  State.msg
catkin_ws/src/buggy_robot/nodes/: controller_node.py  hardware_node.py  position_test.py
catkin_ws/src/buggy_robot/src/buggy_robot/: controller.py  hardware.py
catkin_ws/src/buggy_robot/srv/: SetTarget.srv
catkin_ws/src/buggy_robot/test/: position_test.py
